# alpha-quant

./: .coverage  .dockerignore  .env.example  .gitignore  :memory:  AGENTS.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  compose.yaml  config-schema.json  config.local.toml.example  config.toml  justfile  likec4.config.json  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
.opencode/: opencode.jsonc
.opencode/agents/: alpha-quant-dev.md  reviewer.md
.opencode/plans/: refinement-sprint.md
.streamlit/: config.toml
alpha_quant/: cli.py
alpha_quant/app/: _loop.py  alerts.py  backtest.py  backup.py  bootstrap.py  config.py  dashboard.py  event_log.py  factory.py  fixtures.py  halt.py  paper.py  pipeline.py  pipeline_steps.py  replay.py  scheduler.py  step_models.py  store.py  vault.py
alpha_quant/concepts/: ablation.md  composite-ranking.md  concepts.json  crowding.md  drawdown.md  earnings-blackout.md  fundamental-quality.md  momentum.md  moving-averages.md  regime.md  risk-management.md  rsi.md  technical-score.md
alpha_quant/data/: sector_map.csv
alpha_quant/domain/: __init__.py  _normalize_helpers.py  ablation.py  ask.py  blackout.py  calendar.py  constants.py  corp_actions.py  crowding.py  degradation.py  derive.py  events.py  exceptions.py  fact_check.py  fills.py  fundamental.py  insider_signal.py  invariants.py  journal.py  loop_helpers.py  models.py  narration.py  normalize.py  ranking.py  regime.py  reporting.py  risk.py  scoring.py  sizing.py  technical.py  universe.py  validate.py
alpha_quant/ports/: __init__.py  broker.py  clock.py  event_sink.py  fundamentals.py  insider_feed.py  llm.py  market_data.py  sentiment_feed.py  store.py
concepts/: diversification.md  macd.md  position-sizing.md  sortino.md
data/: alerts.json  state.db.wal
docs/: adapters.md  config-schema.json  spike-openinsider-audit.md  spike-python-314-audit.md  spike-secrets-audit.md
docs/adr/: 0001-use-python-3-12-lts.md  0001-use-python-3-14.md  0002-use-uv-package-manager.md  0003-use-ports-and-adapters.md  0004-use-argparse-for-cli.md  0005-use-pydantic-settings-toml.md  0006-use-duckdb-parquet-analytical-store.md  0007-use-sqlite-sqlalchemy-core-transactional.md  0008-use-custom-numpy-indicators.md  0009-use-pessimistic-fill-model.md  0010-use-custom-event-driven-backtester.md  0011-use-httpx-for-llm-integration.md  0012-use-eodhd-as-primary-data-source.md  0013-use-structlog-structured-logging.md  0014-use-streamlit-for-dashboard.md  0015-use-incremental-o1-indicators.md  0016-use-degrade-dont-block-failure-model.md  0017-use-golden-replay-ci.md  0018-use-bootstrap-fixture-workflow.md  0019-use-astral-tooling-ruff-ty.md  0020-use-duckdb-for-vault-manifest.md  0021-use-duckdb-for-both-analytical-and-transactional-state.md  0022-use-paper-portfolio-engine.md  0023-use-pipeline-orchestrator.md  0024-use-self-consistency-invariants.md  0025-use-sec-connector-sqlite-cache.md  0026-use-content-addressed-vault.md  0027-use-dependency-pruning.md  0028-use-clock-virtualization-for-determinism.md  0029-use-store-mixin-decomposition.md  0030-use-shadow-ablation-books.md  0031-use-file-based-halt-mechanism.md  0032-alpha-lake-data-plane.md  0033-pit-reads-via-clock-asof.md  0034-lake-gateway-port.md  0035-alpha-lake-rest-sole-facts-plane.md  0036-neutral-facts-strategy-policy.md  0037-postgresql-operational-system-of-record.md  0038-append-only-ledger-rebuildable-projections.md  0039-s3-compatible-artifact-store.md  (+34 more)
docs/architecture/: README.md  REFERENCE_ARCHITECTURE.md  model.c4  views.c4
docs/evaluation/: BROKER_DECISION.md  MECHANISM_ANALYSIS.md  PARAMETER_ANALYSIS.md
docs/ops/: CRON_FALLBACK.md
docs/planning/: BACKLOG.md  ROADMAP.md  create_issues.py
docs/spikes/: spike-duckdb-indicators.md  spike-openinsider-audit.md  spike-python-314-audit.md  spike-secrets-audit.md
docs/testing/: BETA_UAT.md
fixtures/golden/: golden_run.json  run.hash
fixtures/v1/: contract.json  facts-bundle-AAPL.json  facts-bundle-AMZN.json  facts-bundle-GOOGL.json  facts-bundle-MSFT.json  facts-bundle-NVDA.json  facts-bundle-SPY.json  health.json  symbols.json
scripts/: check_architecture.sh  generate_fixtures.py  init_artifacts.py  seed_dashboard.py
src/app/: _loop.py  backtest.py  backup.py  bootstrap.py  catalog.py  cli.py  config.py  dashboard.py  event_log.py  factory.py  fixtures.py  paper.py  pipeline.py  pipeline_steps.py  replay.py  scheduler.py  step_models.py  vault.py
src/domain/: __init__.py  _normalize_helpers.py  ablation.py  ask.py  blackout.py  calendar.py  corp_actions.py  crowding.py  degradation.py  derive.py  events.py  fact_check.py  fills.py  fundamental.py  insider_signal.py  invariants.py  journal.py  loop_helpers.py  models.py  narration.py  normalize.py  ranking.py  regime.py  reporting.py  risk.py  scoring.py  sizing.py  technical.py  universe.py  validate.py
src/ports/: __init__.py  broker.py  event_sink.py  fundamentals.py  insider_feed.py  lake.py  llm.py  market_data.py  sentiment_feed.py  store.py
tests/: conftest.py  test_e2e_mock.py  test_golden_replay.py
tests/chaos/: test_corruption.py  test_kill_mid_run.py
tests/helpers/: bundle_builder.py
tests/integration/: test_advice_flow.py  test_backtest_integration.py  test_dashboard_e2e.py  test_paper_portfolio.py  test_persist_run_result.py  test_store_round_trip.py
tests/qa/: test_qa1_clean_install.sh  test_qa2_cli_smoke.sh  test_qa3_ingest_degradation.sh
tests/unit/: test_ablation.py  (+59 more)
(+32471 files in other folders)
