[project]
name = "alpha-quant"
version = "0.1.0-alpha.1"
description = "Deterministic, daily-cadence, long-only equity trading system"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "duckdb>=1.2",
    "tenacity>=9.0",
    "typer>=0.15",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.15",

    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
]

[project.scripts]
alpha-quant = "alpha_quant.application.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "ruff>=0.11",
    "ty>=0.0.40",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["alpha_quant*"]

[tool.uv]
package = true

[tool.ruff.lint.per-file-ignores]
"src/alpha_quant/adapters/postgres/tables.py" = ["F811"]

[tool.ruff]
target-version = "py314"
line-length = 100

# Clock hygiene: domain functions should not read the OS clock.
# See CI workflow and DESIGN.md I9 for the invariant and exceptions.


[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["B008"]  # Typer requires function calls in default arguments

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.14"
python = "./.venv"

[tool.ty.rules]
possibly-unresolved-reference = "error"
invalid-argument-type = "error"
missing-argument = "error"
invalid-return-type = "error"
division-by-zero = "warn"
unused-ignore-comment = "warn"
redundant-cast = "warn"

[tool.ty.src]
include = ["src", "tests"]
exclude = [".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "chaos: destructive tests that corrupt state or kill processes (skip in CI).",
]
filterwarnings = ["error"]
